k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: spring-boot-service
  namespace: spring-boot

spec:
  type: NodePort

  selector:
    app: spring-boot-app

  ports:
    - protocol: TCP
      port: 9191
      targetPort: 9191
      nodePort: 30191
