k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: spring-boot-ingress
  namespace: product-v1

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: spring-boot-v1-service
                port:
                  number: 9191

          - path: /v1-1
            pathType: Prefix
            backend:
              service:
                name: spring-boot-v1-1-service
                port:
                  number: 9191

          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: spring-boot-v2-service
                port:
                  number: 9191
